# aoscbootstrap

./: .gitignore  Cargo.toml  README.md  aoscbootstrap.pl
.github/workflows/: ci.yml  daily-build-tarballs.yml
assets/: bootstrap.sh  cleanup.sh  etc-bootstrap.tar.xz
config/: aosc-mainline.toml  aosc-retro.toml
contrib/: generate-emukit  generate-releases  generate-releases.sh
recipes/: base+nvidia.lst  base+nvidia340.lst  base+nvidia390.lst  base.lst  buildkit.lst  cinnamon+nvidia.lst  cinnamon+nvidia340.lst  cinnamon+nvidia390.lst  cinnamon.lst  container.lst  convert.pl  desktop+latx.lst  desktop+nvidia.lst  desktop.lst  emukit.lst  gnome+nvidia.lst  gnome+nvidia340.lst  gnome+nvidia390.lst  gnome.lst  kde+latx.lst  kde+nvidia.lst  kde+nvidia340.lst  kde+nvidia390.lst  kde.lst  livekit.lst  lxde+nvidia.lst  lxde+nvidia340.lst  lxde+nvidia390.lst  lxde.lst  mate+nvidia.lst  mate+nvidia340.lst  mate+nvidia390.lst  mate.lst  retro-base.lst  retro-desktop.lst  retro-minimal.lst  retro-server.lst  server.lst  wsl.list  xfce+nvidia.lst  (+3 more)
recipes/common/: base-common.lst  cinnamon-common.lst  gnome-common.lst  kde-common.lst  lxde-common.lst  mate-common.lst  rk3399-pinebook-pro.lst  rk3399-rockpro64.lst  sun50i-a64-pine64-plus.lst  sun50i-a64-pinephone-1.2.lst  sun50i-a64-teres-i.lst  sun50i-h5-orangepi-pc2.lst  sun50i-h5-orangepi-prime.lst
recipes/mainline/: base-common.lst  cinnamon-common.lst  gnome-common.lst  kde-common.lst  lxde-common.lst  mate-common.lst  rk3328-rock64.lst  rk64-common.lst  rpi64-common.lst  server-common.lst  starfive-jh7110-common.lst  sun50i-a64-bananapi-m64.lst  sun50i-a64-pinebook.lst  sun50i-a64-pinetab-early-adopter.lst  sun50i-a64-sopine-baseboard.lst  sun50i-h5-libretech-all-h3-cc.lst  sun50i-h5-nanopi-neo2.lst  sun50i-h6-pine-h64.lst  sunxi64-common.lst  xfce-common.lst
recipes/retro/: base-common.lst  desktop-common.lst  minimal-common.lst  server-common.lst
recipes/rk64/: base-rk3328-rock64.lst  base-rk3399-pinebook-pro.lst  base-rk3399-rockpro64.lst  cinnamon-rk3328-rock64.lst  cinnamon-rk3399-pinebook-pro.lst  cinnamon-rk3399-rockpro64.lst  desktop-rk3328-rock64.lst  desktop-rk3399-pinebook-pro.lst  desktop-rk3399-rockpro64.lst  gnome-rk3328-rock64.lst  gnome-rk3399-pinebook-pro.lst  gnome-rk3399-rockpro64.lst  kde-rk3328-rock64.lst  kde-rk3399-pinebook-pro.lst  kde-rk3399-rockpro64.lst  lxde-rk3328-rock64.lst  lxde-rk3399-pinebook-pro.lst  lxde-rk3399-rockpro64.lst  mate-rk3328-rock64.lst  mate-rk3399-pinebook-pro.lst  mate-rk3399-rockpro64.lst  server-rk3328-rock64.lst  server-rk3399-pinebook-pro.lst  server-rk3399-rockpro64.lst  xfce-rk3328-rock64.lst  xfce-rk3399-pinebook-pro.lst  xfce-rk3399-rockpro64.lst
recipes/rpi64/: base-rpi64.lst  cinnamon-rpi64.lst  desktop-rpi64.lst  gnome-rpi64.lst  kde-rpi64.lst  lxde-rpi64.lst  mate-rpi64.lst  server-rpi64.lst  xfce-rpi64.lst
recipes/starfive/: base-jh7110-starfive-visionfive-2-v1.3b.lst  desktop-jh7110-starfive-visionfive-2-v1.3b.lst  server-jh7110-starfive-visionfive-2-v1.3b.lst
recipes/sunxi64/: base-sun50i-a64-bananapi-m64.lst  base-sun50i-a64-pine64-plus.lst  base-sun50i-a64-pinebook.lst  base-sun50i-a64-pinephone-1.2.lst  base-sun50i-a64-pinetab-early-adopter.lst  base-sun50i-a64-sopine-baseboard.lst  base-sun50i-a64-teres-i.lst  base-sun50i-h5-libretech-all-h3-cc.lst  base-sun50i-h5-nanopi-neo2.lst  base-sun50i-h5-orangepi-pc2.lst  (+98 more)
scripts/: desktop.sh  emukit.sh  enable-dkms.sh  enable-nvidia-drivers.sh  livekit.sh  rawimage.sh  reset-repo.sh  wsl-machine-id-hack.sh  wsl-workarounds.sh
src/: cli.rs  fs.rs  guest.rs  install.rs  main.rs  network.rs  tar_dir_size.rs  topics.rs
(+2 files in other folders)
