[package]
name = "aoscbootstrap"
version = "0.10.3"
description = "Helper for bootstrapping AOSC OS from scratch"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
which = "7"
toml = "0.8"
ar = "0.9"
tar = "0.4"
clap = { version = "^4", features = ["derive"] }
anyhow = "1.0"
nix = { version = "0.29", features = ["fs", "user"] }
sha2 = "0.10"
rayon = "1.8"
libloading = "0.8"
libsolv-sys = "0.1"
url = "2.4"
faster-hex = "0.10"
tempfile = "3.8"
bytesize = "2"
fs3 = "0.5"
num_cpus = "1.16"
owo-colors = "^4"
flate2 = "1.0"
oma-debcontrol = "0.3"
oma-repo-verify = "0.8"
zstd = "0.13"
serde_json = "1.0.132"
libaosc = { version = "0.3", default-features = false, features = ["arch", "parse-pacakges-manifest"] }
indicatif = "0.17"
walkdir = "2.5.0"
oma-refresh = { version = "0.48.2", default-features = false, features = ["sequoia-nettle-backend", "rustls", "blocking"] }
liblzma = { version = "0.4", features = ["parallel"] }
oma-fetch = "0.30"

[profile.release]
lto = true
