[package]
name = "aoscbootstrap"
version = "0.10.6"
description = "Helper for bootstrapping AOSC OS from scratch"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = [
    "blocking",
    "http2",
    "rustls-no-provider",
], default-features = false }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "tls12",
] }
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.0"
which = "8.0.2"
toml = "1"
ar = "0.9.0"
tar = "0.4.45"
clap = { version = "^4.6.0", features = ["derive"] }
anyhow = "1.0.102"
nix = { version = "0.31", features = ["fs", "user"] }
sha2 = "0.10.0"
rayon = "1.11.0"
libloading = "0.9.0"
libsolv-sys = "0.1.4"
url = "2.5.8"
faster-hex = "0.10.0"
tempfile = "3.27.0"
bytesize = "2.3.1"
fs3 = "0.5.0"
num_cpus = "1.17.0"
owo-colors = "^4.3.0"
flate2 = "1.1.9"
oma-debcontrol = "0.3.1"
oma-repo-verify = "0.10.0"
zstd = "0.13.3"
serde_json = "1.0.149"
libaosc = { version = "0.4.0", default-features = false, features = [
    "arch",
    "parse-pacakges-manifest",
] }
indicatif = "0.18.4"
walkdir = "2.5.0"
oma-refresh = { version = "0.54.4", default-features = false, features = [
    "sequoia-nettle-backend",
    "rustls",
    "blocking",
] }
liblzma = { version = "0.4.6", features = ["parallel"] }
oma-fetch = "0.36.2"

[profile.release]
lto = true
